package bif3.mtcg.types;

public enum ElementType {
    water,
    fire,
    normal
}