package org.example.frontend;

public enum TradeStatus {
    ACCEPTED, REJECTED, PENDING
}
