@startuml

class User {
-Profile profile
-List<Card> deck
-List<Card> stack
-List<Trade> trades
-boolean isLoggedIn
+Profile getProfile()
+boolean getIsLoggedIn()
+void setIsLoggedIn(boolean status)
+void setProfile(Profile profile)
+void manageCards()
+void addCardToDeck(Card card)
+void addUserCard(Card card)
+void printDeck()
+void acceptTrade(Trade trade)
+void battle(User opponent)
}

class Profile {
-String username
-String password
-int coins
-int gamesPlayed
-int elo
+Profile(String un, String pw)
+void setUsername(String name)
+void setPassword(String pw)
+void setCoins(int coins)
+void setGamesPlayed(int games)
+void setElo(int elo)
+String getUsername()
+String getPassword()
+int getCoins()
+int getGamesPlayed()
+int getElo()
+void printProfile()
}

enum TradeStatus {
ACCEPTED
REJECTED
PENDING
}

enum ElementType {
WATER
FIRE
NORMAL
}

class Card {
-int cardID
-String name
-int damage
-ElementType type
-User owner
+String getCardName()
+ElementType getElementType()
+User getOwner()
+void setCardName(String name)
+void setElementType(ElementType type)
+void setOwner(User owner)
}

class MonsterCard extends Card {
-String specialAbility
+void makeDamage()
}

class SpellCard extends Card {
-String effectType
+void makeDamage()
}

class Trade {
-int tradeID
-User initiator
-User receiver
-Card offeredCard
-Card requestedCard
-TradeStatus status
+void accept()
+void reject()
}

class BattleLog {
-int battleID
-User user1
-User user2
-User winner
+void logBattle(User user1, User user2, User winner)
}

class BattleRound {
-int roundID
-Card user1Card
-Card user2Card
-User winner
+void determineWinner()
}

class Shop {
+{static} final int packageSize = 5
-List<Package> packages
+void purchaseCards(User user)
+void tradeCards(Card card)
+void shopMenu()
+void printInstructions(boolean wrongInput)
}

class Package {
-List<Card> cards
-int cost
+boolean buy(User user)
}

MonsterCard <|-- Card
SpellCard <|-- Card
User "1" o-- "0.." Card : besitzt
User "1" o-- "0.." Trade : macht
Trade "1" -- "2" User : betrifft
Trade "1" o-- "1" Card : beinhaltet (angeboten/gefordert)
User "1" o-- "0.." BattleLog : teilnehmen in
BattleLog "1" o-- "0.." BattleRound : enthält
Shop "1" o-- "0.." User : verkauft an
Shop "1" o-- "0.." Package : bietet
Package "1" o-- "0..*" Card : enthält

@enduml